--- a/src/main/resources/static/css/store/style.css
+++ b/src/main/resources/static/css/store/style.css
@@ -15,3 +15,10 @@ header{
  	border-style: solid;
  	border-color: aqua;
 }
+
+.item1{
+	height: 130px;
+	border-width: 2px;
+ 	border-style: solid;
+ 	border-color: aqua;
+}
